<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.usp.icmc.studywithme.Inicio">
    <item
        android:id="@+id/action_criar"
        android:orderInCategory="100"
        android:title="@string/action_criar"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_buscar"
        android:orderInCategory="101"
        android:title="@string/action_buscar"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_notif"
        android:orderInCategory="102"
        android:title="@string/action_notif"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_agenda"
        android:orderInCategory="103"
        android:title="@string/action_agenda"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_perfil"
        android:orderInCategory="104"
        android:title="@string/action_perfil"
        app:showAsAction="never" />
</menu>
