<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:text="@string/text_disciplina"
        android:id="@+id/info_disciplina"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/info_text_disciplina"
        android:layout_toEndOf="@+id/info_disciplina"
        android:layout_toRightOf="@+id/info_disciplina"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"/>

    <TextView android:text="@string/text_materia"
        android:id="@+id/info_materia"
        android:layout_below="@id/info_disciplina"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/info_text_materia"
        android:layout_toEndOf="@+id/info_materia"
        android:layout_toRightOf="@+id/info_materia"
        android:layout_below="@id/info_text_disciplina"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"/>

    <TextView android:text="@string/text_data"
        android:id="@+id/info_data"
        android:layout_below="@+id/info_materia"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/info_text_data"
        android:layout_toEndOf="@+id/info_data"
        android:layout_toRightOf="@+id/info_data"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:layout_below="@+id/info_text_materia"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp" />

    <TextView android:text="@string/text_hora"
        android:id="@+id/info_hora"
        android:layout_below="@+id/info_data"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/info_text_hora"
        android:layout_toEndOf="@+id/info_hora"
        android:layout_toRightOf="@+id/info_hora"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:layout_below="@+id/info_text_data"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp" />


</RelativeLayout>