<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_info_part"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.usp.icmc.studywithme.InfoPart">

    <TextView android:text="@string/text_materia"
        android:id="@+id/part_materia"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/part_text_materia"
        android:layout_toEndOf="@+id/part_materia"
        android:layout_toRightOf="@+id/part_materia"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    <TextView android:text="@string/text_data"
        android:id="@+id/part_data"
        android:layout_below="@+id/part_materia"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/part_text_data"
        android:layout_toEndOf="@+id/part_data"
        android:layout_toRightOf="@+id/part_data"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:layout_below="@+id/part_text_materia"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <TextView android:text="@string/text_hora"
        android:id="@+id/part_hora"
        android:layout_below="@+id/part_data"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/part_text_hora"
        android:layout_toEndOf="@+id/part_hora"
        android:layout_toRightOf="@+id/part_hora"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="end"
        android:textAlignment="textEnd"
        android:layout_below="@+id/part_text_data"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/part_part"
        android:layout_below="@+id/part_hora"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp" />


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:name="com.google.android.gms.maps.MapFragment"
        android:id="@+id/part_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/part_hora"/>

</RelativeLayout>
